<resources>
    <string name="app_name">KeepItFitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login__email_hint">Correo electrónico</string>
    <string name="login__password_hint">Contraseña</string>
    <string name="login__password_recovery_header">¿Olvidaste tu contraseña?</string>
    <string name="login__login_button">Iniciar Sesión</string>
    <string name="login__signup_button">Registrarme</string>
    <string name="login__password_recovery_button">Recuperar Contraseña</string>
    <string name="login__signup_header">Registrarse</string>
    <string name="navigation_home__entrenar_title">Entrenar</string>
    <string name="navigation_home__entrenamientos_title">Entrenamientos</string>
    <string name="navigation_home__progreso_title">Progreso</string>
    <string name="home__user_configuration_header">Configuración</string>
    <string name="home__username_hint">Nombre de usuario</string>
    <string name="home__save_changes_button">Guardar</string>
    <string name="user_configuration__weight_hint">Peso (kg)</string>
    <string name="user_configuration__height_hint">Altura (m)</string>
    <string name="user_configuration__imc_hint">IMC</string>
    <string name="user_configuration__imc_disclaimer_underweight">Peso insuficiente</string>
    <string name="user_configuration__imc_disclaimer_normal">Peso normal</string>
    <string name="user_configuration__imc_disclaimer_overweight">Sobrepeso</string>
    <string name="user_configuration__imc_disclaimer_obesity">Obesidad</string>
    <string name="realizar_entrenamiento__start_training_button">Empezar</string>
    <string name="home__next_exercise_button">Siguiente</string>
</resources>